--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -13,6 +13,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0  # Shallow clones disabled to assist SonarQube analysis
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
