--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,11 +1,11 @@
 # This workflow will build a Java project with Gradle
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
 
-name: Gradle release
+name: Release
 
 on:
   push:
-    branches: [ main ]
+#    branches: [ main ]
 
 jobs:
   build:
@@ -41,12 +41,13 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: ./gradlew build sonarqube --info
 
+
       # The USERNAME and TOKEN need to correspond to the credentials environment variables used in
       # the publishing section of your build.gradle
-#      - name: Publish to GitHub Packages
-#        run: ./gradlew publish --info --stacktrace
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Publish to GitHub Packages
+        run: ./gradlew release publish -Prelease.useAutomaticVersion=true --info --stacktrace
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: UploadCoverageToCodeCov
         uses: codecov/codecov-action@v1
         with:
