--- a/java-app/build.gradle
+++ b/java-app/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'org.springframework.boot' version "$springBootVersion"
     id 'com.google.cloud.tools.jib' version '2.7.0'
     id "io.freefair.lombok" version "5.3.0"
-    id 'eu.davidea.grabver'
+    id 'net.researchgate.release' version '2.8.1'
 }
 
 apply plugin: 'java'
@@ -44,7 +44,7 @@ dependencies {
 
 group = 'net.hendonfc'
 archivesBaseName = 'greensnet'
-version = versioning.major + '.' + versioning.minor + '.' + versioning.patch + '.' + versioning.build
+version = "1.1.0"
 description = 'Greensnet'
 sourceCompatibility = 11
 targetCompatibility = 11
@@ -58,6 +58,7 @@ repositories {
     jcenter()
     google()
 }
+
 publishing {
     publications {
         gpr(MavenPublication) {
@@ -80,11 +81,6 @@ publishing {
     }
 }
 
-versioning {
-    // Required (number)
-    major 1
-    minor 0
-}
 bootJar {
     launchScript()
 }
@@ -97,10 +93,15 @@ test {
 jacocoTestReport {
     dependsOn test
     reports {
-        xml.enabled true
-        xml.destination file("${buildDir}/reports/jacoco/report.xml")
-        csv.enabled false
-        html.enabled false
+        xml.enabled = true
+        xml.destination = file("${buildDir}/reports/jacoco/report.xml")
+        csv.enabled = false
+        html.enabled = false
     }
 }
 
+release {
+    git {
+        requireBranch = 'versioning'
+    }
+}
