--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -4,7 +4,7 @@
 name: Release
 
 on:
-  pull_request:
+  push:
 #    push
 #    branches: [ main ]
 
@@ -40,15 +40,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: ./gradlew build sonarqube --info
-
-
-      # The USERNAME and TOKEN need to correspond to the credentials environment variables used in
-      # the publishing section of your build.gradle
-      - name: Publish to GitHub Packages
-        run: ./gradlew release publish -Prelease.useAutomaticVersion=true --info --stacktrace
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: ./gradlew release publish -Prelease.useAutomaticVersion=true --info --stacktrace build sonarqube --info
       - name: UploadCoverageToCodeCov
         uses: codecov/codecov-action@v1
         with:
