--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -40,7 +40,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: ./gradlew clean release publish -Prelease.useAutomaticVersion=true --info --stacktrace build sonarqube --info
+        run: ./gradlew clean release jar publish -Prelease.useAutomaticVersion=true --info --stacktrace build sonarqube --info
       - name: UploadCoverageToCodeCov
         uses: codecov/codecov-action@v1
         with:
