--- a/java-app/build.gradle
+++ b/java-app/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'org.springframework.boot' version "$springBootVersion"
     id 'com.google.cloud.tools.jib' version '2.7.0'
     id "io.freefair.lombok" version "5.3.0"
-    id 'eu.davidea.grabver'
+    id 'net.researchgate.release' version '2.8.1'
 }
 
 apply plugin: 'java'
@@ -44,7 +44,6 @@ dependencies {
 
 group = 'net.hendonfc'
 archivesBaseName = 'greensnet'
-version = versioning.major + '.' + versioning.minor + '.' + versioning.patch + '.' + versioning.build
 description = 'Greensnet'
 sourceCompatibility = 11
 targetCompatibility = 11
@@ -58,6 +57,7 @@ repositories {
     jcenter()
     google()
 }
+
 publishing {
     publications {
         gpr(MavenPublication) {
@@ -80,14 +80,10 @@ publishing {
     }
 }
 
-versioning {
-    // Required (number)
-    major 1
-    minor 0
-}
 bootJar {
     launchScript()
 }
+
 test {
     useJUnitPlatform()
 
@@ -104,3 +100,8 @@ jacocoTestReport {
     }
 }
 
+release {
+    git {
+        requireBranch = 'versioning'
+    }
+}
