--- a/java-app/gradle.properties
+++ b/java-app/gradle.properties
@@ -1,6 +1,4 @@
 #gradle.properties
-group=net.hendonfc
-version=0.0.1-SNAPSHOT
-#gpr.user=philrogersuk
+version=2.0.0
 
 springBootVersion=2.3.1.RELEASE
