--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -43,9 +43,8 @@ jobs:
       - name: Build with Gradle
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: ./gradlew clean release -Prelease.useAutomaticVersion=true --info
-      - name: Build with Gradle
+      - name: Run sonarqube analysis
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
