--- a/java-app/build.gradle
+++ b/java-app/build.gradle
@@ -105,3 +105,12 @@ release {
         requireBranch = 'upload-via-scp'
     }
 }
+
+configurations {
+    [apiElements, runtimeElements].each {
+        it.outgoing.artifacts.removeIf {
+            it.buildDependencies.getDependencies(null).contains(jar)
+        }
+        it.outgoing.artifact(bootJar)
+    }
+}
