Mess around with version 2

--- a/java-app/build.gradle
+++ b/java-app/build.gradle
@@ -44,6 +44,8 @@ dependencies {
 
 group = 'net.hendonfc'
 archivesBaseName = 'greensnet'
+version = "$version"
+
 description = 'Greensnet'
 sourceCompatibility = 11
 targetCompatibility = 11
@@ -63,7 +65,7 @@ publishing {
         gpr(MavenPublication) {
             groupId "$group"
             artifactId "$archivesBaseName"
-//            version "$version"
+            version "$version"
 
             from components.java
         }
