--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Build with Gradle and Publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: ./gradlew clean release publish -Prelease.useAutomaticVersion=true --info --verbose --stacktrace
+        run: ./gradlew clean release publish -Prelease.useAutomaticVersion=true --debug --stacktrace
       - name: Run sonarqube analysis
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
