Try with hardcoded username?

--- a/java-app/build.gradle
+++ b/java-app/build.gradle
@@ -75,7 +75,7 @@ publishing {
             name = "GitHubPackages"
             url = "https://maven.pkg.github.com/philrogersuk/greensnet-deployment-test"
             credentials {
-                username = System.getenv("GITHUB_ACTOR")
+                username = "philrogersuk"
                 password = System.getenv("GITHUB_TOKEN")
             }
         }
